--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "sample github-action for testing",
   "main": "dist/src/index.js",
   "scripts": {
+    "package": "ncc build src/index.ts",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -20,6 +21,10 @@
   },
   "homepage": "https://github.com/nazirahmad_microsoft/Test-GitHub-Action#readme",
   "devDependencies": {
+    "@vercel/ncc": "^0.38.1",
     "typescript": "^5.3.3"
+  },
+  "dependencies": {
+    "@actions/core": "^1.10.1"
   }
 }
